@@ -1,10 +1,8 @@
-; $Id: et-EE.ini 18997 2011-01-21 10:19:01Z eraser $
+; $Id: et-EE.ini 18997 2011-09-15 10:19:01Z eraser $
 ; Joomla! Project
 ; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt
 ; Note : All ini files need to be saved as UTF-8
-
-
 
 ;Stepbar
 
@@ -210,10 +208,12 @@ JUSERNAME="Kasutajanimi"
 JYES="Jah"
 
 ; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="MySQL-iga ühendumine ebaõnnestus."
 JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Andmebaasi draiveri laadimine ebaõnnestus: %s"
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Sinu sessioon on aegunud. Palun värskenda lehte."
-JLIB_FORM_VALIDATE_FIELD_INVALID="Vigane väli: %s"
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Väli on kohustuslik: %s"
+JLIB_FORM_VALIDATE_FIELD_INVALID="Vigane väli: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Andmebaasiga ühendumine ebaõnnestus <br />joomla.library: %1$s - %2$s"
 
 ;Necessary for errors
 ADMIN_EMAIL="Sinu e-post"
