@@ -3,7 +3,7 @@
 	version="1.7"
 	client="installation">
 	<name>Estonian</name>
-	<version>1.7.0</version>
+	<version>1.7.1</version>
 	<creationDate>2010-11-04</creationDate>
 	<author>Joomla! Project</author>
 	<authorUrl>eraser.ee</authorUrl>
