@@ -206,10 +206,12 @@ JUSERNAME="שם משתמש"
 JYES="כן"
 
 ; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="אינו יכול להתחבר ל-MySQL."
 JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="אין אפשרות לטעות את הדרייבר של הבסיס נתונים: %s"
 JLIB_ENVIRONMENT_SESSION_EXPIRED="פג תוקפו של ה-session שלך, אנא טען מחדש את העמוד."
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="שדה נדרש: %s"
 JLIB_FORM_VALIDATE_FIELD_INVALID="שדה אינו תקין: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: אינו יכול להתחבר לבסיס הנתונים <br />joomla.library: %1$s - %2$s"
 
 ;Necessary for errors
 ADMIN_EMAIL="כתובת הדואל שלכם"
