@@ -1,4 +1,4 @@
-; $Id: tr-TR.ini 00001 2010-12-16 00:=00:00 umitkenan $
+; $Id: tr-TR.ini 00005 2011-09-16 00:=00:00 umitkenan $
 ; Joomla! Project
 ; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt
@@ -44,6 +44,7 @@ INSTL_DATABASE_PASSWORD_DESC="Site güvenliği için mysql hesabında parola kul
 INSTL_DATABASE_PASSWORD_LABEL="Parola"
 INSTL_DATABASE_PREFIX_DESC="Bir veritabanı ön eki seçiniz. İdeali, üç ya da dört karakter uzunluğunda, sadece abecesayısal karakterler içermeli ve bir alt çizgi ile bitmelidir. Tablo yedeklerinde kullanıldığı için &quot;bak_&quot; ön ekini kullanmayınız."
 INSTL_DATABASE_PREFIX_LABEL="Tablo Ön Eki"
+INSTL_DATABASE_PREFIX_MSG="Tablo ön eki bir harf ile başamalı ve isteğe bağlı olarak alfanumerik karakterler ya da alt çizgi ile devam etmelidir."
 INSTL_DATABASE_TYPE_DESC="Büyük bir olasılıkla &quot;MySQLi&quot;"
 INSTL_DATABASE_TYPE_LABEL="Veritabanı Türü"
 INSTL_DATABASE_USER_DESC="Sunucu tarafından verilen isim ya da "_QQ_"root"_QQ_" gibi bir isim"
@@ -113,10 +114,12 @@ INSTL_COMPLETE_TITLE="Tebrikler! Joomla! şimdi kuruldu."
 
 ;Database Model
 INSTL_DATABASE_COULD_NOT_CONNECT="Veritabanına bağlanılamıyor. Bağlayıcı şu numarayı verdi: %s"
+INSTL_DATABASE_COULD_NOT_REFRESH_MANIFEST_CACHE="Eklenti için açık önbellek yenilenemedi: %s"
 INSTL_DATABASE_EMPTY_NAME=""
 INSTL_DATABASE_ERROR_BACKINGUP="Veritabanının yedeklenmesinde bazı hatalar meydana geldi."
 INSTL_DATABASE_ERROR_CREATE="%s veritabanı oluşturulması denenirken hata oluştu.<br />Kullanıcının veritabanı oluşturmak için yeterli yetkisi olmayabilir. Joomla'nın kurulumundan önce gerekli veritabanını oluşturmalısınız."
 INSTL_DATABASE_ERROR_DELETE="Veritabanı silinirken bazı hatalar oluştu."
+INSTL_DATABASE_ERROR_INITIALISE_SCHEMA="Şema sürümünün başlatılması hatası"
 INSTL_DATABASE_FIELD_VALUE_REMOVE="Kaldır"
 INSTL_DATABASE_FIELD_VALUE_BACKUP="Yedekle"
 INSTL_DATABASE_FIX_TOO_LONG="MySQL tablo ön eki en fazla on beş karakter olabilir."
@@ -203,10 +206,12 @@ JUSERNAME="Kullanıcı Adı"
 JYES="Evet"
 
 ; Framework strings necessary when no lang pack is available
+JLIB_DATABASE_ERROR_CONNECT_MYSQL="MySQL bağlantısı yapılamadı."
 JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="Veritabanı sürücüsü yüklenemedi: %s"
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Oturumunuz zaman aşımına uğramış, lütfen sayfayı yenileyin."
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Gerekli alan: %s"
 JLIB_FORM_VALIDATE_FIELD_INVALID="Geçersiz alan: %s"
+JLIB_UTIL_ERROR_CONNECT_DATABASE="JDatabase: :getInstance: Veritabanına bağlanılamadı <br />joomla.library: %1$s - %2$s"
 
 ;Necessary for errors
 ADMIN_EMAIL="e-Posta Adresiniz"
