@@ -3,7 +3,7 @@
 	version="1.7"
 	client="installation">
 	<name>Türkçe (Türkiye)</name>
-	<version>1.7.0</version>
+	<version>1.7.1</version>
 	<creationDate>December 2010</creationDate>
 	<author>Ümit Kenan Gönüllü</author>
 	<copyright>Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.</copyright>
